--- a/static/css/live.css
+++ b/static/css/live.css
@@ -1,64 +1,68 @@
 .topnav {
-	background: linear-gradient(90deg, #3A1964 , #813dd9);
+  background: linear-gradient(90deg, #0a1172, #0a1172);
 }
 
 .topnav h2 {
-	font-size: 2rem;
-	margin-bottom: .5rem;
-	font-weight: 500;
-	line-height: 1.1;
-	margin-top: 0;
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+  font-weight: 500;
+  line-height: 1.1;
+  margin-top: 0;
 }
 
 .navbar-brand-white-text {
-		color: #fff !important;
+  color: #fff !important;
 }
 
 #timer {
-	margin-top: 3.5rem;
+  margin-top: 3.5rem;
 }
 
 #buttons {
-	margin-top: 2.5rem;
+  margin-top: 2.5rem;
 }
 
 button {
-	margin: .5rem;
+  margin: 0.5rem;
 }
 
 .purpleButton {
-	color: #3A1964 !important;
-	background-color: transparent;
+  color: #0a1172 !important;
+  background-color: transparent;
 }
 
 .purpleButton:hover {
-	color: white !important;
-	background-color: #3A1964 ;
+  color: white !important;
+  background-color: #0a1172;
 }
 
 .time {
-	font-size: 5rem !important;
-	line-height: 40px;
-	color: #000;
+  font-size: 5rem !important;
+  line-height: 40px;
+  color: #000;
 }
 
-#challenges, #schedule {
-	width: 75vw;
-	margin-top: 3rem;
+#challenges,
+#schedule {
+  width: 75vw;
+  margin-top: 3rem;
 }
 
 .center {
-    margin: auto;
-    width: 50%;
-    padding: 1rem;
+  margin: auto;
+  width: 50%;
+  padding: 1rem;
 }
 
 body {
-	font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important; 
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol", "Noto Color Emoji" !important;
 }
 
-#scheduleList, #challengeList {
-	max-height: 500px;
-	overflow:scroll;
-    -webkit-overflow-scrolling: touch;
+#scheduleList,
+#challengeList {
+  max-height: 500px;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
